# eva_bf

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  first_bf.evasm
benches/: parse.rs
data/: helloworld.eva  helloworld.evasm  mandelbrodt.evasm
src/: code_generation.rs  generate.rs  lib.rs  main.rs  parse.rs  utils.rs
src/generate/: mod.rs  optimizations.rs
