[package]
name = "evabf"
version = "0.2.1"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false # Prevent libtest from benchmarking library

[dependencies]
evasm = {git = "https://github.com/solarliner/rs-evasm", tag = "0.2.1"}
clap = "2.33.0"
peg = "0.6.0"
wbuf = "0.1.1"

[dev-dependencies]
criterion = "0.3.0"

[[bin]]
name = "evabf"
path = "src/bin/main.rs"
bench = false # Prevent libtest from benchmarking library

[[bench]]
name = "parse"
harness = false
